Rebrand from NodeZero to MyNodeOne
REASON FOR CHANGE:
NodeZero is a registered trademark. To avoid any legal issues and conflicts,
we're rebranding to MyNodeOne - a name that better reflects the project's
mission of empowering users to run their own infrastructure.

COMPREHENSIVE REBRANDING:
- NodeZero → MyNodeOne (all instances)
- nodezero → mynodeone (lowercase)
- NODEZERO → MYNODEONE (uppercase)
- github.com/vinsac/nodezero → github.com/vinsac/mynodeone

FILES CHANGED: 47 files modified, 1 renamed, 1 new

SCRIPTS:
- Renamed: scripts/nodezero → scripts/mynodeone
- Updated ASCII art banners in 3 scripts with new MyNodeOne branding
- Updated all script references and comments

DOCUMENTATION:
- All 21 documentation files updated
- README.md, FAQ.md, CHANGELOG.md, etc.
- Updated website (index.html)
- Updated all dev-docs for consistency

CONFIGURATION:
- Updated config/security files
- Updated manifests/security files
- Updated all YAML configurations

NEW FILE:
- REBRANDING-COMPLETE.md - Complete guide for next steps including:
  * What was changed (detailed list)
  * How to rename GitHub repo
  * How to purchase and setup mynodeone.com domain
  * DNS configuration instructions
  * User announcement template
  * Verification checklist

TESTING:
- All script banners updated and tested
- Main installation script renamed and functional
- Documentation cross-references updated

NEXT STEPS FOR REPO OWNER:
1. Review changes: git diff
2. Push to current repo: git push origin main
3. Rename GitHub repo: nodezero → mynodeone (in Settings)
4. Update local remote: git remote set-url origin https://github.com/vinsac/mynodeone.git
5. Purchase domain: mynodeone.com
6. Configure DNS to redirect to GitHub repo
7. Post announcement about rebranding

See REBRANDING-COMPLETE.md for detailed instructions on all next steps.

This is a clean, complete rebrand with no functional changes to the code.

--- a/manifests/security/network-policies.yaml
+++ b/manifests/security/network-policies.yaml
@@ -1,4 +1,4 @@
-# Default Network Policies for NodeZero
+# Default Network Policies for MyNodeOne
 # These implement a "default deny" strategy with explicit allow rules
 
 ---
