Repository cleanup and CHANGELOG update for v1.0.2
## Repository Cleanup:

### Removed Internal Working Files
- Deleted AUDIT_FINDINGS.md (internal audit document)
- Deleted AUDIT_SUMMARY.md (internal working document)
- Deleted TERMINOLOGY_FIXES_SUMMARY.md (internal report)
- Deleted fix-tailscale-routes.sh (obsolete testing script)
- Removed setup-client-dns.sh (generated file, already in .gitignore)

### Organized Helper Scripts
- Moved access-services.sh to scripts/ directory (proper location)
- Updated .gitignore to prevent internal files (AUDIT_*.md, *_FIXES_SUMMARY.md)

### Why These Changes:
- Internal audit files don't belong in main repo
- Testing/temporary scripts should not be committed
- Helper scripts belong in scripts/ directory
- Clean root directory for professional appearance

## CHANGELOG Update:

Added comprehensive Version 1.0.2 entry documenting:
- ✅ CRITICAL FIX: Management laptop network access
- ✅ Automatic Tailscale subnet route configuration
- ✅ Control plane automatic networking setup
- ✅ Documentation overhaul (dual-level explanations)
- ✅ Terminology standardization
- ✅ setup-laptop.sh bug fixes
- ✅ Repository cleanup
- ✅ Integration improvements
- ✅ Real-world testing and validation

## Result:
- Clean, professional root directory
- Only essential files in repo
- Comprehensive changelog for v1.0.2
- Future-proofed with .gitignore patterns

This addresses all repository organization concerns.

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,8 @@ build/
 
 # Generated client DNS setup script (created during installation)
 setup-client-dns.sh
+
+# Internal working documents (not for repo)
+AUDIT_*.md
+*_FIXES_SUMMARY.md
+*_AUDIT.md
