Fix: Comment out template resource quota to prevent 'your-namespace' error
ERROR: Security hardening failed with:
  Error from server (NotFound): namespaces 'your-namespace' not found

CAUSE: resource-quotas.yaml contained a template section with placeholder
  namespace 'your-namespace' that was being applied to cluster

FIX: Commented out the template section (lines 67-86)
  - Template is now documentation only
  - Users can uncomment and customize for their namespaces
  - No more errors during security hardening

RESULT: Security hardening now completes successfully

--- a/manifests/security/resource-quotas.yaml
+++ b/manifests/security/resource-quotas.yaml
@@ -64,22 +64,23 @@ spec:
       min:
         storage: "1Gi"
 
----
+# ---
 # Template for custom namespace quotas
-# Copy and customize for each namespace
-apiVersion: v1
-kind: ResourceQuota
-metadata:
-  name: custom-namespace-quota-template
-  namespace: your-namespace  # Change this
-  annotations:
-    description: "Template - customize for your namespace"
-spec:
-  hard:
-    # Adjust based on namespace needs
-    requests.cpu: "10"
-    requests.memory: "20Gi"
-    limits.cpu: "20"
-    limits.memory: "40Gi"
-    pods: "30"
-    services: "10"
+# Copy and customize for each namespace as needed
+# 
+# apiVersion: v1
+# kind: ResourceQuota
+# metadata:
+#   name: custom-namespace-quota-template
+#   namespace: your-namespace  # Change this to your actual namespace
+#   annotations:
+#     description: "Template - customize for your namespace"
+# spec:
+#   hard:
+#     # Adjust based on namespace needs
+#     requests.cpu: "10"
+#     requests.memory: "20Gi"
+#     limits.cpu: "20"
+#     limits.memory: "40Gi"
+#     pods: "30"
+#     services: "10"
