Implement production-ready sync with offline node support
Requirements Addressed:
1. Management laptops not always online
2. Regular interval syncing for consistency
3. Retry failed syncs automatically

Implementation:
1. sync-controller.sh:
   - Added reachability check before sync attempts
   - Mark offline nodes as 'pending_sync' instead of erroring
   - Enhanced periodic_reconciliation with pending node tracking
   - Added daemon mode (watch + reconcile combined)
   - Improved logging and status reporting

2. Reachability Check:
   - Quick SSH ping test before attempting sync
   - Graceful failure if node offline
   - Marks node for retry on next cycle
   - No error spam in logs

3. Periodic Reconciliation:
   - Runs every hour (configurable)
   - Retries all pending_sync nodes
   - Full consistency check
   - Logs pending node count

4. Daemon Mode (RECOMMENDED):
   - Combines watch + reconcile
   - Immediate sync on ConfigMap changes
   - Hourly retry for offline nodes
   - Best for production with laptops

5. Systemd Service:
   - Updated to use daemon mode
   - Auto-restart on failure
   - Proper environment setup
   - Resource limits

6. enable-sync-controller-service.sh:
   - New script to install and enable service
   - Auto-detects paths and kubeconfig
   - Shows status and useful commands
   - Production-ready setup

How It Works:
- Watch mode: Immediate sync when apps installed (10s latency)
- Reconciliation: Retry offline nodes every hour
- Status tracking: active, pending_sync, error
- Graceful handling: No errors for offline nodes
- Auto-recovery: Nodes sync within 1 hour of coming online

Benefits:
✅ Laptops can be offline without breaking sync
✅ Automatic retry every hour
✅ Consistent state across all nodes
✅ Production-grade reliability
✅ Comprehensive monitoring and logging
✅ Systemd integration with auto-restart

Usage:
  sudo ./scripts/enable-sync-controller-service.sh
  sudo journalctl -u mynodeone-sync-controller -f
  sudo ./scripts/lib/sync

--- a/systemd/mynodeone-sync-controller.service
+++ b/systemd/mynodeone-sync-controller.service
@@ -1,15 +1,22 @@
 [Unit]
-Description=MyNodeOne Sync Controller - Event-Driven Config Push
+Description=MyNodeOne Sync Controller - Event-Driven Config Push with Reconciliation
 After=network.target k3s.service
 Requires=k3s.service
+Documentation=https://github.com/vinsac/MyNodeOne
 
 [Service]
 Type=simple
 User=root
-WorkingDirectory=/path/to/MyNodeOne
-ExecStart=/path/to/MyNodeOne/scripts/lib/sync-controller.sh watch
+WorkingDirectory=/root/MyNodeOne
+# Use daemon mode: watch for changes + reconcile every hour
+# This ensures offline nodes (laptops) get synced when they come online
+ExecStart=/root/MyNodeOne/scripts/lib/sync-controller.sh daemon 1
 Restart=always
 RestartSec=10
+
+# Environment
+Environment="PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+Environment="KUBECONFIG=/root/.kube/config"
 
 # Logging
 StandardOutput=journal
@@ -19,6 +26,9 @@ SyslogIdentifier=mynodeone-sync
 # Security
 PrivateTmp=yes
 NoNewPrivileges=true
+
+# Resource limits
+LimitNOFILE=65536
 
 [Install]
 WantedBy=multi-user.target
